# onion

./: .gitignore  LICENSE  README.md  build.sh  build.zig  build.zig.zon  dune-project  gleam.toml  manifest.toml  onion  onion.opam  out.onion
examples/: math.onion
lib/: chunk.ml  dune  dynarray.ml  lexer.ml  opcode.ml  token.ml  utils.ml  value.ml  vm.ml
src/: Machine.zig  file.c  file.h  inst.h  inst.zig  machine.c  machine.h  main.c  main.zig  onion.c  onion.gleam  opcode.c  root.zig  value.zig
src/onion/: lexer.gleam  vm.gleam
test/: dune  onion_test.gleam
